# yahtzee-rl

./: .gitignore  README.md  pyproject.toml
src/yahtzee_rl/: __init__.py
src/yahtzee_rl/markov/: lookaheads.py  probabilities.py
src/yahtzee_rl/scoring/: ops.py  scorecard.py
tests/: test_scorecard.py  test_scoring_operations.py
